# Deferral-Ledger

./: .gitignore  DAY1_CHAITANYA_TASKS.md  DAY1_VARUN_TASKS.md  Makefile  README.md  api.py  app.py  audit.py  brief.py  cascade.py  catalog.py  dag.py  data_ingest.py  gates.py  models.py  montecarlo.py  optimize.py  panels.py  priors.py  pyproject.toml  requirements.txt  run.py  sensitivity.py  synth.py  ui.py  validation.py
.streamlit/: config.toml
catalog/: contested.yaml  edges.yaml  edges_india.yaml
data/synthetic/: metadata.json  synthetic_tracts.json  synthetic_tracts_india.json
docs/: DAY2_CHAITANYA_TASKS.md  DAY2_VARUN_TASKS.md  DAY3_CHAITANYA_TASKS.md  DAY3_VARUN_TASKS.md  DEFERRAL_LEDGER_SRS.md  edge_evidence_ledger.md  golden_scenario_brief.md  model_card.md  submission_answers.md
notebooks/: eval.ipynb
samples/: multiplier_result.example.json
tests/: __init__.py  test_audit_optimize.py  test_brief_panels.py  test_catalog.py  test_dag_spine.py  test_montecarlo.py  test_sensitivity_gates.py  test_stability.py  test_validation.py
