[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deferral-ledger"
version = "0.1.0"
description = "A cross-system cascade-cost decision-support engine for deferred infrastructure investment"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "networkx>=3.3",
    "SALib>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "requests>=2.31",
    "pytest>=8.2",
    "fastapi>=0.111",
    "streamlit>=1.35",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
